# AI_SDLC_Context

./: .gitignore  AI_INIT_REVIEW.md  AI_SDLC_V3_COMPLETE.md  ARCHITECTURE.md  CLAUDE.md  CREATING_MERGE_TUPLES.md  EXAMPLE_WALKTHROUGH.md  FULL_CONTEXT_STATE_FEATURE.md  GAP_ANALYSIS.md  INSTALLER_SETUP_COMPLETE.md  INTENT.md  INVENTORY.md  MCP_SETUP.md  MERGE_TUPLE_QUICK_REFERENCE.md  NEW_PROJECT_SETUP.md  PLUGIN_GUIDE.md  QUICKSTART.md  README.md  SESSION_SUMMARY_2025-11-20.md  STATUS.md  USAGE_EXAMPLES.md  marketplace.json  pyproject.toml  pytest.ini  setup.py
.claude/: hooks.json  settings.json
.claude-plugin/: marketplace.json
contexts/: README.md  contexts.json
docs/: AI_SDLC_UX_DESIGN.md  FOLDER_BASED_ASSET_DISCOVERY.md  FOLDER_BASED_REQUIREMENTS.md  IMPLEMENTATION_PLAN.md  MCP_SETUP.md  README.md  SUBAGENTS_GUIDE.md  USAGE_EXAMPLES.md  ai_sdlc_concepts.md  ai_sdlc_executive_summary.md  ai_sdlc_full_flow.md  ai_sdlc_guide.md  ai_sdlc_guide_v1_2.md  ai_sdlc_method.md  ai_sdlc_overview.md
example_projects_repo/: README.md  projects.json
examples/: README.md  advanced_usage.py  basic_usage.py  load_methodology_context.py
installers/: README.md  common.py  setup_all.py  setup_commands.py  setup_plugins.py  setup_workspace.py  validate_traceability.py
mcp_service/: MCP_SDLC_INTEGRATION_PLAN.md  README.md  pytest.ini  requirements.txt  setup.py
methodology/: README.md
personas/: business_analyst.yml  data_architect.yml  devops_engineer.yml  qa_engineer.yml  security_engineer.yml  software_engineer.yml
plugins/: README.md
tests/: README.md  __init__.py  (+3 more)
(+209 files in other folders)
